map library upgraded